[package]
name = "newsletter-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-rs"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
tracing = {version = "0.1", features = ["log"]}
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features= ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
config = "0.13"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.19"
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]